turret dont be fireing

--- a/pvz.css
+++ b/pvz.css
@@ -29,3 +29,12 @@ html {
   background-color: black;
   background-size: 100% 100%;
 }
+
+.turret {
+  position: absolute;
+  top: 0;
+  height: 8vw;
+  width: 8vw;
+  background-color: yellowgreen;
+  background-size: 100% 100%;
+}
