--- a/pvz.css
+++ b/pvz.css
@@ -22,6 +22,10 @@ html {
   transition: left 0.1s linear;
 }
 
+.TVzombie {
+  filter: hue-rotate(180deg);
+}
+
 .space {
   position: absolute;
   top: 0;
@@ -48,4 +52,5 @@ html {
   background-image: url("zombie.png");
   background-size: 100% 100%;
   transition: left 0.1s linear;
+  filter: blur(1px);
 }
