--- a/pvz.css
+++ b/pvz.css
@@ -47,10 +47,9 @@ html {
 .projectile {
   position: absolute;
   top: 3vw;
-  height: 2vw;
-  width: 2vw;
-  background-image: url("zombie.png");
+  height: 4vw;
+  width: 5vw;
+  background-image: url("bullet.png");
   background-size: 100% 100%;
   transition: left 0.1s linear;
-  filter: blur(1px);
 }
