--- a/pvz.css
+++ b/pvz.css
@@ -67,9 +67,27 @@ html {
   background-color: whitesmoke;
   z-index: 1;
   position: absolute;
-  top: 8.9vw;
-  border-radius: 2vw;
-  padding: 3vw;
-  border: 1vw solid black;
+  top: 7.8vw;
+  border-radius: 1vw;
+  padding: 1vw;
+  border: 0.5vw solid black;
   box-shadow: 2vw 2vw 7vw midnightblue;
+  font-size: 2vw;
+  width: 16vw;
+}
+
+.button,
+.button2 {
+  display: inline-block;
+  background-image: url("turret.png");
+  background-size: 100% 100%;
+  height: 8vw;
+  width: 8vw;
+  border: 0;
+  padding: 0;
+  margin: 0;
+  outline: 0;
+}
+.button2 {
+  filter: hue-rotate(180deg);
 }
