--- a/pvz.css
+++ b/pvz.css
@@ -31,7 +31,7 @@ html {
   top: 0;
   height: 8vw;
   width: 8vw;
-  background-color: black;
+  background-color: rgb(15, 133, 0);
   background-size: 100% 100%;
 }
 
